--- a/testadmin/resources/application.conf
+++ b/testadmin/resources/application.conf
@@ -2,8 +2,10 @@ ktor {
     deployment {
         port = 8080
         port = ${?PORT}
+        watch = [ classes ]
     }
     application {
         modules = [ testadmin.ApplicationKt.module ]
     }
+    development = true
 }
